# Kafka-Collections

lib-kafka/: Cargo.toml
lib-kafka/src/: main.rs
